Remove waterfall banner and increase margin on input

--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </a>
           </paper-menu>
       </div>
-      <paper-header-panel main mode="waterfall-tall">
+      <paper-header-panel main>
 
         <!-- Main Toolbar -->
         <paper-toolbar id="mainToolbar">
@@ -94,7 +94,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <!-- Application name -->
           <div class="middle paper-font-display2 app-name">
-            Polymer Todos
+            Todos
           </div>
 
           <!-- Application sub title -->
