--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -41,3 +41,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="routing.html">
 <link rel="import" href="todo-list/todo-list.html">
 <link rel="import" href="todo-item/todo-item.html">
+<link rel="import" href="todo-input/todo-input.html">
