--- a/app/index.html
+++ b/app/index.html
@@ -68,22 +68,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </paper-toolbar>
 
         <!-- Drawer Content -->
-          <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
-              <a data-route="home" href="/">
-                <iron-icon icon="home"></iron-icon>
-                <span>Home</span>
-              </a>
+        <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
+          <a data-route="all" href="/">
+            <iron-icon icon="home"></iron-icon>
+            <span>All Todos</span>
+          </a>
 
-              <a data-route="users" href="/users">
-                <iron-icon icon="info"></iron-icon>
-                <span>Users</span>
-              </a>
+          <a data-route="active" href="/active">
+            <iron-icon icon="info"></iron-icon>
+            <span>Active</span>
+          </a>
 
-              <a data-route="contact" href="/contact">
-                <iron-icon icon="mail"></iron-icon>
-                <span>Contact</span>
-              </a>
-          </paper-menu>
+          <a data-route="completed" href="/completed">
+            <iron-icon icon="mail"></iron-icon>
+            <span>Completed</span>
+          </a>
+        </paper-menu>
       </div>
       <paper-header-panel main>
 
@@ -106,64 +106,32 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="content">
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
-            <section data-route="home">
+            <section data-route="all">
               <paper-material elevation="1">
-                <todo-list id="todoList" todos="{{todos}}"></todo-list>
-
-                <iron-localstorage id="localStorage"
-                                   name="starter-kit-todo"
-                                   value="{{todos}}">
-                </iron-localstorage>
+                <todo-list todos="{{todos}}">
+                </todo-list>
               </paper-material>
 
               <paper-material elevation="1">
-                <paper-input id="todoInput" label="Enter a todo"></paper-input>
-                <paper-button raised on-tap="addTodo">Add Todo</paper-button>
-                <paper-button raised on-tap="reset">Clear All</paper-button>
-              </paper-material>
-
-              <paper-material elevation="1" class="paper-font-body2">
-                <h1 id="license">License</h1>
-                <p>Everything in this repo is BSD style license unless otherwise specified.</p>
-                <p>Copyright (c) 2015 The Polymer Authors. All rights reserved.</p>
-                <p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
-                <ul>
-                <li>Redistributions of source code must retain the above copyright
-                notice, this list of conditions and the following disclaimer.</li>
-                <li>Redistributions in binary form must reproduce the above
-                copyright notice, this list of conditions and the following disclaimer
-                in the documentation and/or other materials provided with the
-                distribution.</li>
-                <li>Neither the name of Google Inc. nor the names of its
-                contributors may be used to endorse or promote products derived from
-                this software without specific prior written permission.</li>
-                </ul>
-                <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS &quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
-              </paper-material>
-
-            </section>
-
-            <section data-route="users">
-              <paper-material elevation="1">
-                <h2 class="paper-font-display2">Users</h2>
-                <p>This is the users section</p>
-                <a href="/users/Rob">Rob</a>
+                <todo-input on-add-todo="addTodo"
+                            on-reset-todos="reset">
+                </todo-input>
               </paper-material>
             </section>
 
-            <section data-route="user-info">
+            <section data-route="active">
               <paper-material elevation="1">
-                <h2 class="paper-font-display2">
-                User:<span>{{params.name}}</span>
-                </h2>
-                <div>This is <span>{{params.name}}</span>'s section</div>
+                <todo-list todos="{{todos}}"
+                           filter-by="active">
+                </todo-list>
               </paper-material>
             </section>
 
-            <section data-route="contact">
+            <section data-route="completed">
               <paper-material elevation="1">
-                <h2 class="paper-font-display2">Contact</h2>
-                <p>This is the contact section</p>
+                <todo-list todos="{{todos}}"
+                           filter-by="completed">
+                </todo-list>
               </paper-material>
             </section>
 
@@ -185,6 +153,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                          precache-file="precache.json">
       </platinum-sw-cache>
     </platinum-sw-register>
+
+    <iron-localstorage id="localStorage"
+                       name="starter-kit-todo"
+                       value="{{todos}}">
+    </iron-localstorage>
 
   </template>
 
