Add padding to iron-sortable-list

--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -18,7 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       display: block;
     }
     iron-sortable-list {
-      /*padding: 16px;*/
+      padding: 16px;
     }
     todo-item {
       margin: 16px 0;
