--- a/app/index.html
+++ b/app/index.html
@@ -70,17 +70,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <!-- Drawer Content -->
         <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
           <a data-route="all" href="/">
-            <iron-icon icon="home"></iron-icon>
+            <iron-icon icon="assignment"></iron-icon>
             <span>All Todos</span>
           </a>
 
           <a data-route="active" href="/active">
-            <iron-icon icon="info"></iron-icon>
+            <iron-icon icon="assignment-late"></iron-icon>
             <span>Active</span>
           </a>
 
           <a data-route="completed" href="/completed">
-            <iron-icon icon="mail"></iron-icon>
+            <iron-icon icon="assignment-turned-in"></iron-icon>
             <span>Completed</span>
           </a>
         </paper-menu>
