--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -43,8 +43,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <template is="dom-repeat" items="{{todos}}"
                                 filter="_byState"
                                 observe="isComplete">
-        <todo-item completed="{{item.isComplete}}">
-          <span>{{item.title}}</span>
+        <todo-item completed="{{item.isComplete}}"
+                   index="[[index]]">
+          <span class="todo-title">{{item.title}}</span>
         </todo-item>
       </template>
     </iron-sortable-list>
