--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -32,6 +32,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-register.html">
 
+<!-- Firebase elements -->
+<link rel="import" href="../bower_components/firebase-element/firebase.html">
+
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
 
