--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <section data-route="all">
               <paper-material elevation="1">
                 <todo-list todos="[[todos]]"
-                           on-todo-list-sorted="syncTodos"
+                           on-todo-item-edited="editTodo"
                            on-todo-item-checked-toggled="toggleTodo"
                            on-todo-item-canceled="removeTodo">
                 </todo-list>
