--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -33,6 +33,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --disabled-text-color: #bdbdbd;
     --divider-color: #B6B6B6;
 
+    /* My Custom Properties */
+    --default-font-family: 'Roboto', 'Noto', sans-serif;
+
     /* Components */
 
     /* paper-drawer-panel */
@@ -84,7 +87,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    font-family: 'Roboto', 'Noto', sans-serif;
+    font-family: var(--default-font-family);
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-size: 14px;
